# expenvelope

./: .build.yml  README.md  envelope.py  envelope_segment.py  setup.cfg  setup.py
examples/: JSON_serializer.py  constructing_and_modifying.py  discontinuities.py  envelope_examples.py  from_left.py
expenvelope/: __init__.py  _utilities.py  envelope.py  envelope_segment.py  json_serializer.py  utilities.py
