[metadata]
name = expenvelope
description = Piecewise-exponential curves designed for musical expressiveness.
long_description = file: README.md
author = Marc Evanstein
author_email = marc@marcevanstein.com
url = https://git.sr.ht/~marcevanstein/expenvelope
license = GNU GPL Version 3
version = 0.7.2

[options]
zip_safe = False
packages = find:
python_requires = >=3.10
